--- a/.github/workflows/elt-pipeline.yml
+++ b/.github/workflows/elt-pipeline.yml
@@ -1,8 +1,8 @@
 name: ELT Pipeline
 
 on:
-  schedule:
-    - cron: '0 6 * * *'  # Daily at 6 AM UTC
+  # schedule:
+  #   - cron: '0 6 * * *'  # Daily at 6 AM UTC
   workflow_dispatch:
     inputs:
       job:
