--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# Paracelsus Environment Configuration Template
-# Copy to .env and fill in values for local development.
-# In production, use AWS Secrets Manager or similar.
+# Paracelsus Environment Configuration
+# Copy to .env for local development: cp .env.example .env
+#
+# These are demo credentials for the POC. In production, use AWS Secrets Manager.
 
 # =============================================================================
 # AWS / LocalStack Credentials
@@ -15,14 +16,14 @@ AWS_DEFAULT_REGION=us-east-1
 OLTP_HOST=oltp-db
 OLTP_PORT=5432
 OLTP_USER=admin
-OLTP_PASSWORD=<your-oltp-password>
+OLTP_PASSWORD=oltp_secret
 OLTP_DB=supervision
 
 # Meltano tap-postgres config (uses OLTP as source)
 TAP_POSTGRES_HOST=oltp-db
 TAP_POSTGRES_PORT=5432
 TAP_POSTGRES_USER=admin
-TAP_POSTGRES_PASSWORD=<your-oltp-password>
+TAP_POSTGRES_PASSWORD=oltp_secret
 TAP_POSTGRES_DATABASE=supervision
 
 # =============================================================================
@@ -31,14 +32,14 @@ TAP_POSTGRES_DATABASE=supervision
 OLAP_HOST=olap-db
 OLAP_PORT=5432
 OLAP_USER=warehouse
-OLAP_PASSWORD=<your-olap-password>
+OLAP_PASSWORD=olap_secret
 OLAP_DB=analytics
 
 # Meltano target-postgres config (OLAP warehouse)
 TARGET_POSTGRES_HOST=olap-db
 TARGET_POSTGRES_PORT=5432
 TARGET_POSTGRES_USER=warehouse
-TARGET_POSTGRES_PASSWORD=<your-olap-password>
+TARGET_POSTGRES_PASSWORD=olap_secret
 TARGET_POSTGRES_DBNAME=analytics
 
 # =============================================================================
@@ -51,7 +52,7 @@ LOCALSTACK_HOST=localstack
 # =============================================================================
 # HubSpot (Mock API in development, real API key in production)
 # =============================================================================
-TAP_HUBSPOT_API_KEY=<your-hubspot-api-key>
+TAP_HUBSPOT_ACCESS_TOKEN=mock-token
 
 # =============================================================================
 # Meltano / dbt
